# autonomous-drug-discovery-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adr/0001-retrieval-stack/: index.html
adr/0002-local-llm-ollama/: index.html
adr/0003-retrieval-only-citation/: index.html
adr/0004-chembl-not-drugbank/: index.html
adr/0005-dual-orchestrator/: index.html
architecture/: index.html
caveats/: index.html
configs/: config.yaml  sources.yaml
docker/: Dockerfile  docker-compose.ci.yml  docker-compose.yml  entrypoint.sh
docs/: architecture.md  caveats.md  evidence.md  extraction.md  index.md  kg.md  orchestrator-report.md  ranking-molecules.md  real-vs-mocked.md
docs/adr/: 0001-retrieval-stack.md  0002-local-llm-ollama.md  0003-retrieval-only-citation.md  0004-chembl-not-drugbank.md  0005-dual-orchestrator.md
evidence/: index.html
extraction/: index.html
kg/: index.html
orchestrator-report/: index.html
ranking-molecules/: index.html
real-vs-mocked/: index.html
reports/: extraction_eval.json
search/: search_index.json
src/adda/: __init__.py  cli.py  config.py  logging.py
src/adda/api/: __init__.py  app.py
src/adda/api/static/: app.js  index.html  styles.css
src/adda/cache/: __init__.py  disk_cache.py  redis_cache.py
src/adda/evidence/: __init__.py  aggregate.py  opentargets.py  tiering.py
src/adda/extraction/: __init__.py  benchmark.py  grounding.py  llm_relations.py  models.py  pubtator_entities.py  scispacy_fallback.py
src/adda/kg/: __init__.py  centrality.py  loader.py  schema.py
src/adda/models/: __init__.py  corpus.py
src/adda/molecules/: __init__.py  chembl.py  triage.py
src/adda/orchestrator/: __init__.py  custom.py  langgraph_impl.py  runtime.py  state.py  tools.py
src/adda/ranking/: __init__.py  target_ranker.py
src/adda/ratelimit/: __init__.py  token_bucket.py
src/adda/report/: __init__.py  generator.py  verify_citations.py
src/adda/retrieval/: __init__.py  base.py  dedupe.py  europepmc.py  merge.py  openalex.py  pubmed.py  pubtator3.py
tests/: conftest.py
tests/fixtures/: biored_subset_gold.json  biored_subset_predicted.json
tests/unit/: test_api_phase7.py  test_chembl.py  test_dedupe.py  test_evidence_aggregate.py  test_evidence_opentargets.py  test_evidence_tiering.py  test_extraction_benchmark.py  test_extraction_llm.py  test_extraction_pubtator.py  test_extraction_scispacy_grounding.py  test_inverted_index.py  test_kg_centrality.py  test_kg_compose.py  test_kg_loader.py  test_kg_schema.py  test_merge.py  test_molecule_triage.py  test_orchestrator_phase6.py  test_productionization_phase7.py  test_report_phase6.py  test_retrieval_clients.py  test_retrieval_edges.py  test_target_ranker.py  test_token_bucket.py
