[project]
name = "autonomous-drug-discovery-agent"
version = "0.1.0"
description = "Autonomous retrieval-first drug discovery research agent."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Autonomous Drug Discovery Agent Contributors" }
]
keywords = ["drug-discovery", "pubmed", "openalex", "europe-pmc", "pubtator"]
dependencies = [
  "chembl-webresource-client>=0.10.9",
  "diskcache>=5.6.3",
  "graphdatascience>=1.11.0",
  "httpx>=0.27.0",
  "langgraph>=1.2.4",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "neo4j>=5.23.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "pyyaml>=6.0.1",
  "rdkit>=2026.3.2",
  "redis>=5.0.3",
  "structlog>=24.1.0",
  "tenacity>=8.2.3",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
  "ruff>=0.4.4",
  "pyright>=1.1.365",
  "vcrpy>=6.0.1",
]
docs = [
  "mkdocs-material>=9.5.21",
]

[project.scripts]
adda = "adda.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adda"]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
  "ruff>=0.4.4",
  "pyright>=1.1.365",
  "vcrpy>=6.0.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["UP047"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=adda.retrieval --cov=adda.extraction --cov=adda.evidence --cov=adda.kg --cov=adda.ranking --cov=adda.molecules --cov=adda.orchestrator --cov=adda.report --cov=adda.ratelimit --cov=adda.cache --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["adda.retrieval", "adda.extraction", "adda.evidence", "adda.kg", "adda.ranking", "adda.molecules", "adda.orchestrator", "adda.report", "adda.ratelimit", "adda.cache"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
